<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llair1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">
        <com.google.android.material.appbar.AppBarLayout
            android:gravity="center"
            android:id="@+id/app"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/iv_apnea_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10"
                        android:src="@mipmap/left_arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>

                    <TextView
                        android:gravity="center"
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/heart_rate_title"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:id="@+id/tvdesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18sp"
                        android:layout_marginTop="30dp"
                        android:text="Average heart rate"
                        android:textSize="15sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title">

                    </TextView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/app"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center"
                    android:src="@mipmap/logo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ImageView>
            <LinearLayout
                android:id="@+id/lltime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18sp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/lineChart">

                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivbed">

                </TextView>

                <TextView

                    android:id="@+id/tvhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times_min"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toRightOf="@+id/tvHour"
                    app:layout_constraintTop_toBottomOf="@id/ivbed">

                </TextView>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cls"
                android:layout_width="200dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/iv"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >

                <com.example.sleepmonitor_master_v3.CircleView
                    android:id="@+id/circleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:circleColor="#7BB683"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </com.example.sleepmonitor_master_v3.CircleView>

                <TextView
                    android:id="@+id/tvProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:textColor="#7BB683"
                    android:textSize="35dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/time_heart"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvProgress">

                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/cls"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tvRede"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:text="@string/heart_content"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/lltime">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="#e8e8e8"
                app:layout_constraintTop_toBottomOf="@+id/tvRede" />

            <TextView
                android:id="@+id/tvAvgSle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:text="@string/avg_rate"
                android:textColor="#000"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tvRede">

            </TextView>

            <TextView
                android:id="@+id/tvAve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:text="0 bpm"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvAvgSle">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="#e8e8e8"
                app:layout_constraintTop_toBottomOf="@+id/tvAve" />

            <TextView
                android:id="@+id/tvPeak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:text="@string/peak"
                android:textColor="#000"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tvAve">

            </TextView>

            <TextView
                android:id="@+id/tvPeContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:text="0 bpm"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvPeak">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="#e8e8e8"
                app:layout_constraintTop_toBottomOf="@+id/tvPeContent" />

            <TextView
                android:id="@+id/tvLowest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:text="@string/lowest"
                android:textColor="#000"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tvPeContent">

            </TextView>

            <TextView
                android:id="@+id/tvLowestContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="15sp"
                android:text="0 bpm"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvLowest">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="#e8e8e8"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLowestContent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>