<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llair1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/dp_10"
                android:background="#fff"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_10"
                        android:src="@mipmap/left_arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/snore"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tvdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18sp"
            android:layout_marginTop="30dp"
            android:text="@string/sleep_duration"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app">

        </TextView>

        <LinearLayout
            android:id="@+id/lltime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18sp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvdesc">

            <TextView
                android:id="@+id/tvHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivbed">

            </TextView>

            <TextView

                android:id="@+id/tvhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hr"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toRightOf="@+id/tvHour"
                app:layout_constraintTop_toBottomOf="@id/ivbed">

            </TextView>

            <TextView
                android:id="@+id/tvMinute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintLeft_toRightOf="@+id/tvhr"
                app:layout_constraintTop_toBottomOf="@id/ivbed">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="min"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toRightOf="@+id/tvMinute"
                app:layout_constraintTop_toBottomOf="@id/ivbed">

            </TextView>


        </LinearLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/lltime" />

        <TextView
            android:id="@+id/tvsdes"
            android:layout_margin="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snore_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/barChart">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStatus"
            android:layout_marginTop="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvsdes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>